Redo menu to prevent overlapping on <1200px screens

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -137,6 +137,7 @@ a {
 
 #logoBottom{
   padding:12px 0 0 0;
+  display: block;
 }
 
 .logoTop{
